--- a/src/app/board/board.component.html
+++ b/src/app/board/board.component.html
@@ -9,8 +9,8 @@
         <div *ngFor="let x of [0,1,2,3]" class="container" cdkDrag>
           <h2>{{abc[x].listName}}</h2>
           <div cdkDropList [cdkDropListData]="abc[x].listTasks" class="list" (cdkDropListDropped)="dropTasks($event)">
-            <div class="list-item" *ngFor="let item of abc[x].listTasks" cdkDrag>{{item}}</div>
-            <button style="width: 100%;">add Tasks</button>
+            <div class="list-item"  *ngFor="let item of abc[x].listTasks" cdkDrag>{{item}}</div>
+              <button class="sticky-btn" mat-raised-button (click)="openDialog('0ms', '0ms')" style="width: 100%;">Add Task</button>
           </div>
         </div>
 
