--- a/src/app/board/board.component.scss
+++ b/src/app/board/board.component.scss
@@ -24,7 +24,8 @@
   background: white;
   border-radius: 4px;
   display: block;
-  overflow: hidden;
+  overflow-y: auto;
+  height: 500px;
 }
 
 .list-add{
@@ -44,6 +45,7 @@
   background: white;
   color: black;
   font-size: 14px;
+  overflow: hidden;
 }
 
 .list-item:last-child {
@@ -87,4 +89,10 @@
   background-color: #8f54a0;
   border-radius: 10px;
   border: 3px solid #ffffff;
+}
+
+.sticky-btn{
+  position: sticky;
+  position: -webkit-sticky;
+  bottom : 0;
 }
