--- a/src/app/board/board.component.scss
+++ b/src/app/board/board.component.scss
@@ -1,40 +1,47 @@
 .oneline {
-  height: 100%;
-  overflow-x: auto;
-  white-space: nowrap;
+  display: flex;
+  justify-content: flex-start;
+  border: 4px solid green;
 }
 
 .container {
-  width: 400px;
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-start;
+  width: 300px;
+  height: 100;
+	flex-grow: 0;
+	flex-shrink: 0;
   margin: 0 20px;
-  display: inline-block;
-  vertical-align: top;
+  background: white;
+  border: 4px solid yellow;
 }
 
-.container-horizontal{
-  display: inline-block;
-  vertical-align: top;
+.container-taskname
+{
+  border: 4px solid brown;
 }
-
-
 
 .list {
-  border: solid 1px #ccc;
-  min-height: 60px;
+  // border: solid 1px #ccc;
+	flex-grow: 0;
+	flex-shrink: 0;
   background: white;
-  border-radius: 4px;
-  display: block;
   overflow-y: auto;
-  height: 500px;
+  border: 4px solid black;
+  border-radius: 4px;
 }
 
-.list-add{
-  border: solid 1px #ccc;
-  min-height: 50px;
+.list-add-btn{
+  //border: solid 1px #ccc;
+  flex-basis: 300px;
+	flex-grow: 0;
+	flex-shrink: 0;
+  margin: 0 20px;
   background: white;
   border-radius: 4px;
-  display: inline-block;
-  overflow: hidden;
+  border: 4px solid orange;
+
 }
 
 .list-item {
@@ -46,10 +53,13 @@
   color: black;
   font-size: 14px;
   overflow: hidden;
+  border: 4px solid blue;
 }
 
 .list-item:last-child {
   border: none;
+  border: 4px solid pink;
+
 }
 
 /* Highlight the list item that is being dragged. */
